🎞 Foundations of Data Persistence with H2 Only